# RL-with-LLM-feedback

./: .gitignore  README.md  pyproject.toml
scripts/dynamic-reward-function/: train_ppo.py  train_ppo_minihack.py  train_vanilla_ppo.py  train_vanilla_ppo_minihack.py
scripts/q-learning/: README.md  config_dqn.yaml  llm.py  models.py  run_model.py  train_dqn.py  utils.py
